# gx-fluent-pandas-asset-name-bug-demo

./: README.md  iris.exploration.ipynb  main.py  pyproject.toml
docs/: index.html
docs/expectations/: iris_expectations.html
docs/validations/iris_expectations/2023-10-demo/20231003T184839.640752Z/: demo-iris.html
gx/: great_expectations.yml
gx/checkpoints/: demo_iris_expectations.yml
gx/expectations/: .ge_store_backend_id  iris_expectations.json
