[tool.poetry]
name = "gx-fluent-pandas-asset-name-bug-demo"
version = "0.1.0"
description = "Reproducible example of how Fluent Pandas filesystem datasources in GX make it difficult to pass the asset name to the data docs generator"
authors = ["Morgan Benton <morgan.benton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.0.292"
black = "^23.9.1"
great-expectations = "^0.17.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
